# dkls-wrapper

./: .gitignore  Cargo.toml  README.md  build-kotlin-android.sh  build-kotlin.sh  build-swift.sh
docs/: dkg.md
examples/kotlin/: .gitignore  README.md  settings.gradle.kts
examples/kotlin/src/main/kotlin/app/CLICore/: MQTTInterface.kt
examples/kotlin/src/test/kotlin/app/: SmokeTest.kt
examples/rust/: Cargo.toml  dkg.rs  sign.rs
examples/rust/common/: mqtt.rs
examples/swift/: Package.swift
examples/swift/Sources/CLICore/: MQTTTopicInterface.swift
examples/swift/Sources/CLIKeyGen/: main.swift
examples/swift/Sources/CLISign/: main.swift
kotlin/: .gitignore  README.md  build.gradle.kts
kotlin/src/main/java/uniffi/dkls/: dkls.kt
kotlin/src/main/kotlin/app/: Main.kt
kotlin/src/main/kotlin/app/CLICore/: utils.kt
rust/: Cargo.toml
rust/examples/: dkg.rs  sign.rs
rust/examples/common/: mqtt.rs
rust/src/: dkg.rs  error.rs  lib.rs  net.rs  sign.rs  smtest.rs  test.rs  types.rs
src/: lib.rs  net.rs  sign.rs  test.rs  types.rs
swift/: .gitignore  Package.resolved  Package.swift  README.md
swift/Sources/CLICore/: MQTTTopicInterface.swift  utils.swift
swift/Sources/CLIKeyGen/: main.swift
swift/Sources/CLISign/: main.swift
swift/Sources/DKLSCLI/: dkls_cli.swift
swift/Sources/DKLSLib/: DKLSLib.swift  extensions.swift
swift/Sources/MessagingCLI/: FirebaseConfig.swift  MessagingService.swift  cli.swift
swift/Tests/DKLSLibTests/: DKLSLibTests.swift  SignatureTests.swift
swift/Tests/MobileTSSTests/: MobileTSSTests.swift
(+2 files in other folders)
