[package]
name = "dkls-wrapper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "dkls"

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"

[[bin]]
name = "uniffi-bindgen-swift"
path = "src/uniffi-bindgen-swift.rs"

[dependencies]
uniffi = { version = "0.30.0", features = [ "cli" ] }

[build-dependencies]
uniffi = { version = "0.30.0", features = [ "build" ] }
