[package]
name = "dkls-wrapper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "dkls"

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"

[[bin]]
name = "uniffi-bindgen-swift"
path = "src/uniffi-bindgen-swift.rs"

[dependencies]
uniffi = { version = "0.30.0", features = [ "cli" ] }
sl-dkls23 = { version = "1.0.0-beta" }
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6"
tokio = "1.48.0"
sl-mpc-mate = { version = "1.0.0-beta", features = ["simple-relay"] }
hex = "0.4.3"
k256 = { version = "0.13.4", features = ["ecdsa"] }
thiserror = "1.0"
futures = "0.3.31"
async-trait = "0.1.89"
async-stream = "0.3.6"
signature = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
postcard = { version = "1.1.1", features = ["alloc"] }

[build-dependencies]
uniffi = { version = "0.30.0", features = [ "build" ] }

[dev-dependencies]
mockall = "0.14.0"
